# MJLS_Learning

./: CMakeLists.txt  README.md  gen_sys_mat.m  main_large.cpp  main_small.cpp  main_structure.cpp  sys_data2_2_2modes.mat
